--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,3 @@
 SERVER_PORT=8080
 TELEGRAM_TOKEN=
-BACKEND_DEV_CHAT_ID=
-FRONTEND_DEV_CHAT_ID=
-BACKEND_PROD_CHAT_ID=
-FRONTEND_PROD_CHAT_ID=
-OTHER_CHAT_ID=
-BACKEND_PLATFORM=
-FRONTEND_PLATFORM=
+BASE_URL=
