Update dependencies and configuration files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SERVER_PORT=8080
-TELEGRAM_TOKEN=
-BASE_URL=
+TELEGRAM_TOKEN=1111111111:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+BASE_URL=server.com
+TEST_CID=-1000000000000
